<resources>
    <string name="close">Закрыть</string>
    <string name="sign_with_color">Подпись</string>
    <string name="sign">Подпись</string>
    <string name="sign_out_message">Нажмите повторно для выхода из приложения</string>
    <string name="no_internet">Нет интернета</string>
    <string name="no_server_connection">Нет соединения с сервером</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="versionToast">Версия приложения %s.%s от %s - %s.</string>
    <string name="versionShort">Версия: %s</string>
    <string name="alphaText">альфа версия</string>
    <string name="betaText">бета версия</string>
    <string name="releaseCandidateText">выпуск-кандидат</string>
    <string name="productionText">публичный выпуск</string>
    <string name="clear">Очистить</string>
    <string name="show_password">Показать пароль</string>
    <string name="accessDenied">Доступ к приложению ограничен. Нет соответствующей роли, обратитесь к администратору.</string>
    <string name="serverNotAvailable">Сервер не доступен</string>
    <string name="offlineDenied">Авторизации в offline не доступна, требуется выполнить вход в online</string>
    <string name="finger">Отпечаток пальца</string>
    <string name="to_simple_authorization">Вернуться к обычной авторизации</string>
    <string name="drop_pin_code">Сбросить пин-код</string>
    <string name="ready">Готово</string>
    <string name="erase">Стереть</string>
    <string name="image">Изображение</string>
    <string name="image_rotate">Поворот изображения</string>
    <string name="image_view_remove">Удаление изображения</string>
    <string name="image_view_center">Центрировать изображение</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="exit">Выйти</string>
    <string name="start">Старт</string>
    <string name="stop">Стоп</string>
    <string name="cancel">Отмена</string>
    <string name="network_error">Отсутствует подключение к интернету. Нажмите на кнопку старт чтобы попробовать снова</string>
    <string name="choice">Сделайте выбор</string>
    <string name="choice_list">Вывести список</string>
    <string name="to_gallery">Перейти в галерею</string>
    <string name="no_attachments">Нет вложений</string>
    <string name="save">Сохранить</string>
    <string name="image_type">Тип ресурса</string>
    <string name="comment">Комментарий</string>
    <string name="un_valid_save">Сохранить невалидные данные?</string>
    <string name="is_exit_from_card">Вы уверены что хотите выйти?</string>
    <string name="gallery">Фотографии</string>
    <string name="remove_signature">Удаление подписи</string>
    <string name="need_internet_for_original_photo">Для просмотра оригинала требуется наличие интернета</string>
    <string name="settings">Настройки</string>
    <string name="location_menu">Меню местоположения</string>
    <string name="change_mode">Изменить режим</string>
    <string name="can_not_load_photo">Не удалось загрузить</string>
</resources>