<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/signature_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_with_color"
            android:textColor="?android:attr/textColorHint"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/signature_image"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_baseline_create_24"
            android:scaleType="fitCenter"
            android:layout_marginTop="@dimen/indent_small"
            android:contentDescription="@string/sign"
            app:layout_constraintTop_toBottomOf="@id/signature_label"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageButton
            android:id="@+id/btnSignatureClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:background="@android:color/transparent"
            android:contentDescription="@string/remove_signature"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</merge>