<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/indent_medium">

    <ImageView
        android:id="@+id/photo_dialog_image"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image"
        tools:background="@drawable/ic_baseline_wallpaper_48"/>

    <TextView
        android:id="@+id/photo_dialog_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/colorPrimary"
        tools:textColor="@android:color/black"
        android:textSize="@dimen/small_font_size"
        android:layout_marginStart="@dimen/indent_small"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/photo_dialog_image"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/image_type"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/photo_dialog_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_height="24dp"
        android:layout_marginStart="@dimen/indent_small"
        app:layout_constraintTop_toBottomOf="@id/photo_dialog_label"
        app:layout_constraintStart_toEndOf="@id/photo_dialog_image"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/photo_dialog_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment"
        android:gravity="top"
        android:minLines="3"
        android:layout_marginTop="@dimen/indent_small"
        app:layout_constraintTop_toBottomOf="@id/photo_dialog_image"
        app:layout_constraintStart_toEndOf="@id/photo_dialog_image"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textMultiLine"
        android:autofillHints="" />

    <Button
        android:id="@+id/photo_dialog_done"
        style="@style/BlueTheme.ButtonStyle"
        android:layout_marginTop="@dimen/indent_high"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/photo_dialog_comment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>