<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/auto_complete_field_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorHint"
        android:textSize="@dimen/little_font_size"
        tools:text="Наименование"
        android:visibility="gone"
        tools:visibility="visible"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/auto_complete_field_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_field_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/choice"
            android:textSize="@dimen/medium_font_size"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/auto_complete_field_dropdown"/>

        <ImageButton
            android:id="@+id/auto_complete_field_dropdown"
            android:src="@drawable/ic_baseline_arrow_drop_down_24"
            android:background="@android:color/transparent"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/auto_complete_field_value"
            app:layout_constraintEnd_toStartOf="@id/auto_complete_field_cancel"
            android:contentDescription="@string/choice_list" />

        <ImageButton
            android:id="@+id/auto_complete_field_cancel"
            android:src="@drawable/ic_baseline_close_24"
            android:background="@android:color/transparent"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_marginStart="@dimen/indent_high"
            app:layout_constraintStart_toEndOf="@id/auto_complete_field_dropdown"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>