<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <ru.mobnius.core.ui.component.PinCodeLinLay
        android:id="@+id/pinFragment_pclTop"
        android:layout_marginTop="@dimen/indent_high"
        app:layout_constraintBottom_toTopOf="@+id/pinFragment_llDigits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <LinearLayout
        android:id="@+id/pinFragment_llDigits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_high"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pinFragment_btnOne"
                android:background="@drawable/button_round_state"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginEnd="@dimen/indent_high"
                android:text="1"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/pinFragment_btnTwo"
                android:background="@drawable/button_round_state"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginEnd="@dimen/indent_high"
                android:text="2"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/pinFragment_btnThree"
                android:background="@drawable/button_round_state"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:text="3"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_high"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pinFragment_btnFour"
                android:background="@drawable/button_round_state"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginEnd="@dimen/indent_high"
                android:text="4"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/pinFragment_btnFive"
                android:background="@drawable/button_round_state"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginEnd="@dimen/indent_high"
                android:text="5"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/pinFragment_btnSix"
                android:background="@drawable/button_round_state"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:text="6"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_high"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pinFragment_btnSeven"
                android:background="@drawable/button_round_state"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginEnd="@dimen/indent_high"
                android:text="7"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/pinFragment_btnEight"
                android:background="@drawable/button_round_state"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginEnd="@dimen/indent_high"
                android:text="8"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/pinFragment_btnNine"
                android:background="@drawable/button_round_state"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:text="9"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_high"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/pinFragment_ibFingerPrint"
                android:layout_marginEnd="@dimen/indent_high"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/ic_fingerprint_authentication_24dp"
                android:scaleType="centerInside"
                android:visibility="invisible"
                android:contentDescription="@string/finger" />

            <Button
                android:id="@+id/pinFragment_btnZero"
                android:background="@drawable/button_round_state"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginEnd="@dimen/indent_high"
                android:text="0"
                android:textSize="20sp"/>

            <ImageButton
                android:id="@+id/pin_clear"
                android:gravity="end"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="11dp"
                android:layout_marginStart="11dp"
                android:background="@drawable/button_backspace_state"
                android:scaleType="centerInside"
                android:contentDescription="@string/to_simple_authorization" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/pin_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drop_pin_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pinFragment_llDigits"/>

</androidx.constraintlayout.widget.ConstraintLayout>